# sdl_breakout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
breakout/: CMakeLists.txt  Install.cmake
breakout/src/: main.cpp
breakout/src/Lua/: game.lua  logic.lua  menu.lua
breakout/src/Lua/edge/: entity.lua
breakout/src/Lua/lib/: argparse.lua
cmake/: GameInstallCommon.cmake  InstallEdgeDeps.cmake  SymlinkCommonDirs.cmake  TargetAddExtraWarnings.cmake
edge/: CMakeLists.txt  Install.cmake
edge/cmake/: Luacheck.cmake
edge/include/edge/: Game.h  LuaBindings.h  LuaImGui.h  LuaUtil.h
edge/src/: Game.cpp  Globals.cpp  Globals.h  LuaBindings.cpp  LuaImGui.cpp
edge/src/Lua/edge/: entity.lua  math.lua  sound_cache.lua
games/: CMakeLists.txt
games/breakout/: CMakeLists.txt
games/breakout/src/: main.cpp
games/breakout/src/scripts/: game.lua  menu.lua
games/minimal/: CMakeLists.txt
games/minimal/src/: main.cpp
games/minimal/src/scripts/: game.lua
tools/: cloc.sh  init_submodules.sh
